What's new ??

Apr 21/2020 : version 0.9 released
  - fix : support resolution not multiple of 4

Mar 18/2020 : version 0.8 released
  - fix : win64 loader now loads msvcrt dlls properly

Mar 10/2020 : version 0.7 released
  - re-release msi for updated libraries

Jun 15/2015 : version 0.3 released
  - added new video bit rates

Dec 26/2013 : version 0.2 released
  - added stop motion option to advance each frame manually.  Great for making lego animations or what ever you can think of.